# uk-property-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
.agents/skills/block-buy/: SKILL.md
.agents/skills/property-report/: SKILL.md
.agents/skills/property-search/: SKILL.md
.github/: dependabot.yml
.github/workflows/: release.yml
property_mcp/: __init__.py  server.py
